<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_image">Workout image</string>
    <string name="start">start</string>
    <string name="get_ready">get ready for %s</string>
    <string name="start_exercise">start exercise</string>
    <string name="completed_daily_workout">Congratulations! You completed your daily workout</string>
    <string name="no_i_want_to_continue">No, i want to continue</string>
    <string name="yes_i_want_to_stop">Yes, i want to stop</string>
    <string name="are_you_sure_you_want_to_exit_going_back_now_will_cancel_your_current_workout">Are you sure you want to exit? Going back now will cancel your current workout!</string>
    <string name="BMI">BMI</string>
    <string name="calculate_bmi">calculate bmi</string>
    <string name="height">Height</string>
    <string name="heightFt">Height (ft)</string>
    <string name="heightIn">Height (in)</string>
    <string name="weight">Weight</string>
    <string name="your_bmi_is">Your BMI is %.2f</string>
    <string name="metric_unit">Metric</string>
    <string name="us_unit">Imperial</string>
</resources>