<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:padding="@dimen/parent_padding_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textColor="?colorOnBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tvAreYouSure"
        android:text="@string/are_you_sure_you_want_to_exit_going_back_now_will_cancel_your_current_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_marginTop="@dimen/parent_padding_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnYes"
        style="?attr/borderlessButtonStyle"
        android:text="@string/yes_i_want_to_stop"
        app:layout_constraintEnd_toEndOf="@id/tvAreYouSure"
        app:layout_constraintTop_toBottomOf="@id/tvAreYouSure"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        style="?attr/borderlessButtonStyle"
        android:text="@string/no_i_want_to_continue"
        app:layout_constraintEnd_toEndOf="@id/btnYes"
        app:layout_constraintTop_toBottomOf="@id/btnYes"
        />



</androidx.constraintlayout.widget.ConstraintLayout>